--- a/pyproject.toml
+++ b/pyproject.toml
@@ -84,10 +84,13 @@ huggingface-hub = "*"
 roma = "*"
 peft = "*"
 omegaconf = "*"
-xformers = { git = "https://github.com/facebookresearch/xformers.git", rev = "main" }
-simplecv = { git = "https://github.com/pablovela5620/simplecv.git", rev = "10780d8a1d6d3e58b5f8966b62f71f224b812a3f" }
+jaxtyping = ">=0.2.36,<0.3"
+
+# xformers = { git = "https://github.com/facebookresearch/xformers.git", rev = "main" }
+simplecv = { git = "https://github.com/pablovela5620/simplecv.git", rev = "a75e2769bfab5d098df8d0e17112f6242f73d4ee" }
 monopriors = { git = "https://github.com/pablovela5620/monoprior.git" }
 moge = { git = "https://github.com/microsoft/MoGe.git", rev = "6b8b43db567ca4b08615c39b42cffd6c76cada29" }
+vggt = { git = "https://github.com/pablovela5620/vggt.git", rev = "5ed6ec88a951f27959f73bc72eb4b6dc7a028b0c" }
 
 [tool.pixi.feature.dev.dependencies]
 beartype = ">=0.19.0,<0.20"
