Improve headless rerun; add ModelScope fallback; configurable GS export

--- a/.gitignore
+++ b/.gitignore
@@ -140,6 +140,7 @@ celerybeat.pid
 # Environments
 .env
 .envrc
+.envrc.private
 .venv
 env/
 venv/
@@ -208,3 +209,11 @@ __marimo__/
 ckpt/
 data/
 .vscode/launch.json
+
+# Codex/agent workspace files
+tmp/
+task_plan.md
+notes.md
+WORKLOG.md
+LATER_PLANS.md
+ERRORFIX.md
